--- a/package.json
+++ b/package.json
@@ -13,6 +13,35 @@
         "postcss": "^8.4.6",
         "sass": "^1.62.0",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "@popperjs/core": "^2.10.2",
+        "bootstrap": "^5.2.2",
+        "browser-sync": "^2.29.1",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "imagemin-mozjpeg": "^10.0.0",
+        "imagemin-webpack-plugin": "^2.4.2",
+        "laravel-mix": "^6.0.6",
+        "laravel-mix-polyfill": "^3.0.1",
+        "laravel-mix-webp": "^0.1.3",
+        "lodash": "^4.17.19",
+        "postcss-sort-media-queries": "^4.3.0",
+        "sass-loader": "^13.0.2",
+        "svg-spritemap-webpack-plugin": "^4.5.0",
+        "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "@fancyapps/ui": "^4.0.31",
+        "animate.css": "^4.1.1",
+        "core-js": "^3.30.1",
+        "imask": "^6.5.1-alpha.1",
+        "inputmask": "^5.0.7",
+        "jquery": "^3.6.1",
+        "lightbox2": "^2.11.3",
+        "micromodal": "^0.4.10",
+        "svg4everybody": "^2.1.9",
+        "swiper": "^8.4.2",
+        "toastr": "^2.1.4",
+        "ymaps": "^0.2.1"
     }
 }
