--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "lightbox2": "^2.11.3",
         "micromodal": "^0.4.10",
         "svg4everybody": "^2.1.9",
+        "swiper": "^9.2.3",
         "toastr": "^2.1.4",
         "ymaps": "^0.2.1"
     }
