--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "svg-spritemap-webpack-plugin": "^4.5.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0",
+        "vite-plugin-static-copy": "^0.14.0",
         "vue": "^3.2.37"
     },
     "dependencies": {
